--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,21 +6,24 @@
   </view> -->
   <view class="main-content">
     <view class="tab-selection">
-      <text class="tab-nowplaying {{selected_tab==0 ? 'tab-active-text' : ''}}" bind:tap="select_tab" data-index="0">正在热映</text>
-      <text class="tab-upcoming {{selected_tab==1 ? 'tab-active-text' : ''}}" bind:tap="select_tab" data-index="1">即将上映</text>
+      <text class="tab-nowplaying {{selected_tab==0 ? 'tab-active-text' : ''}}" bind:tap="select_tab"
+        data-index="0">正在热映</text>
+      <text class="tab-upcoming {{selected_tab==1 ? 'tab-active-text' : ''}}" bind:tap="select_tab"
+        data-index="1">即将上映</text>
     </view>
     <view class="movies-nowplaying" hidden="{{selected_tab != 0}}">
       <view class='scroll-movie-list'>
         <scroll-view class="scroll-view" scroll-y>
-          <view class="movie-inscroll" wx:for="{{nowplaying_movie_list}}">
+          <view class="movie-inscroll" wx:for="{{nowplaying_movie_list}}" bindtap="navigate_to_movie"
+            data-mid="{{item.id}}">
             <view class="movie-inscroll-poster">
               <image mode="aspectFit" src="{{item.poster}}"></image>
             </view>
             <view class="movie-inscroll-desc">
               <text class="movie-inscroll-title">{{item.title}}</text>
               <text class="movie-inscroll-cate">类型：{{item.cate}}</text>
-              <text class="movie-inscroll-cate">导演：{{item.director}}</text>
-              <text class="movie-inscroll-cate">演员：{{item.performer}}</text>
+              <text class="movie-inscroll-director">导演：{{item.director}}</text>
+              <text class="movie-inscroll-performer">演员：{{item.performer}}</text>
             </view>
             <view class="movie-inscroll-rating">
               <text class="movie-inscroll-rating_score">{{item.rating_score}}</text>
@@ -42,9 +45,7 @@
               <text class="movie-inscroll-cate">导演：{{item.director}}</text>
               <text class="movie-inscroll-cate">演员：{{item.performer}}</text>
             </view>
-            <view class="movie-inscroll-rating">
-              <text class="movie-inscroll-rating_score" style="font-size: 25rpx">敬请期待</text>
-            </view>
+            <view class="movie-inscroll-release_date">{{item.release_date}}</view>
           </view>
         </scroll-view>
       </view>
