--- a/pages/movie/movie.wxss
+++ b/pages/movie/movie.wxss
@@ -1,18 +1,26 @@
 /* pages/movie/movie.wxss */
 
+.main-content {
+  width: 90%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .header-content {
   width: 100%;
   display: inline-flex;
-  border: 1px solid red;
+  /* border: 1px solid red; */
+  border-bottom: 1px solid rgb(248, 244, 244);
 }
 
 .header-content .movie-poster {
   height: 100%;
-  flex-basis: 40%;
-  border: 1px solid blue;
+  flex-basis: 35%;
+  /* border: 1px solid blue; */
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .movie-poster image {
@@ -23,9 +31,9 @@
 }
 
 .header-content .movie-desc {
-  flex-basis: 60%;
+  flex-basis: 65%;
   margin-top: 30rpx;
-  margin-left: 30rpx;
+  margin-left: 20rpx;
   position: relative;
   height: 100%;
   display: inline-flex;
@@ -33,8 +41,8 @@
   align-items: flex-start;
   justify-content: center;
   font-size: 25rpx;
-  word-break:break-all;
-  border: 1px solid green;
+  word-break: break-all;
+  /* border: 1px solid green; */
 }
 
 .movie-desc .movie-title {
@@ -42,4 +50,110 @@
   margin-bottom: 30rpx;
   font-size: 35rpx;
   font-weight: bold;
+}
+
+.movie-detail-content {
+  margin-top: 40rpx;
+  width: 100%;
+  /* border: 1px solid red; */
+}
+
+.movie-detail-content .movie-detail-tab {
+  width: 100%;
+  display: inline-flex;
+  margin-bottom: 25rpx;
+  /* border: 1px solid red; */
+}
+
+.movie-detail-tab .detail-tab-text {
+  font-size: 30rpx;
+  font-weight: 550;
+  margin-right: 30rpx;
+  color: rgb(156, 151, 151);
+  /* border: 1px solid blue; */
+}
+
+.movie-detail-tab .selected-tab {
+  color: rgb(248, 110, 110);
+  border-bottom: 1rpx solid rgb(248, 110, 110);
+}
+
+.movie-intro .movie-intro-text {
+  font-size: 28rpx;
+  word-break: break-all;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+
+.movie-intro .ellipsis {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  -webkit-line-clamp: 5;
+}
+
+.movie-detail {
+  font-size: 28rpx;
+  word-break: break-all;
+}
+
+.movie-main_cast .main_cast-text {
+  margin-top: 40rpx;
+  margin-bottom: 10rpx;
+  font-size: 30rpx;
+  font-weight: 550;
+}
+
+.movie-main_cast .main_cast-view {
+  white-space: nowrap;
+  /* border: 1px solid red; */
+}
+
+.main_cast-view .cast-item {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20rpx;
+  /* border: 1px solid blue; */
+}
+
+.cast-item .cast-name {
+  font-size: 26rpx;
+  font-weight: 500;
+  word-break: break-all;
+  white-space: pre-wrap;
+  width: 150rpx;
+  text-align: center;
+  /* border: 1px solid green; */
+}
+
+.cast-item .cast-poster {
+  position: relative;
+  width: 150rpx;
+  height: 200rpx;
+  border-radius: 5%;
+}
+
+.movie-photos .photos-text {
+  margin-top: 40rpx;
+  margin-bottom: 10rpx;
+  font-size: 30rpx;
+  font-weight: 550;
+}
+
+.movie-photos .photos-view {
+  white-space: nowrap;
+}
+
+.photos-view .photos-item {
+  display: inline-block;
+  margin-right: 10rpx;
+}
+
+.photos-item .photos-poster {
+  height: 300rpx;
+  position: relative;
+  border-radius: 5%;
 }
