--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,1 +1,24 @@
 /* pages/search/search.wxss */
+
+.main-content {
+  width: 90%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.search-bar {
+  position: fixed;
+  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+}
+
+.search-bar .search-input {
+  background-color: rgb(245, 245, 245);
+  width: 100%;
+  height: 60rpx;
+  text-align: center;
+  border-radius: 100rpx;
+}
