--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -4,4 +4,8 @@
     <input focus="true" class="search-input" placeholder="搜索感兴趣的电影" bindinput="onInput" bindconfirm="onSearch"
       confirm-type="search"></input>
   </view>
+  <!-- 用于占位 -->
+  <view class="holder-view"></view>
+  
+  <movie-list-y></movie-list-y>
 </view>
