--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -2,7 +2,7 @@
 
 .main-content {
   width: 90%;
-  position: relative;
+  position: absolute;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -10,6 +10,7 @@
 .search-bar {
   position: fixed;
   width: 100%;
+  height: 60rpx;
   left: 50%;
   transform: translateX(-50%);
   top: 0;
@@ -18,7 +19,11 @@
 .search-bar .search-input {
   background-color: rgb(245, 245, 245);
   width: 100%;
-  height: 60rpx;
+  height: 100%;
   text-align: center;
   border-radius: 100rpx;
+}
+
+.holder-view {
+  margin-top: 60rpx;
 }
