1. fix: scroll-view(scroll-y) 未设置高度导致滑动问题 2. fix: fixed元素未置顶(z-index=999)

--- a/components/movie-list-y/movie-list-y.wxss
+++ b/components/movie-list-y/movie-list-y.wxss
@@ -1,9 +1,7 @@
-.scroll-movie-list {
+.scroll-view {
   width: 100%;
-}
-
-.scroll-movie-list .scroll-view {
-  width: 100%;
+  /* 竖向滚动需要设置高度 */
+  height: 100%;
 }
 
 .scroll-view .movie-inscroll {
