--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,25 +1,27 @@
 /* pages/search/search.wxss */
 
+.main {
+  display: flex;
+  justify-content: center;
+}
+
 .main-content {
   width: 90%;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .search-bar {
   position: fixed;
-  width: 100%;
-  height: 60rpx;
+  z-index: 999;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
-  top: 0;
+  /* border: 1px solid blue; */
 }
 
 .search-bar .search-input {
   background-color: rgb(245, 245, 245);
-  width: 100%;
-  height: 100%;
+  width: 675rpx;
+  height: 60rpx;
   text-align: center;
   border-radius: 100rpx;
 }
