--- a/components/movie-list-x/movie-list-x.wxml
+++ b/components/movie-list-x/movie-list-x.wxml
@@ -1,15 +1,14 @@
 <scroll-view class="scroll-view" scroll-x="true">
-  <view class="movie-inscroll" wx:for="{{movie_list}}" bindtap="navigate_to_movie" data-mid="{{item.id}}">
+  <view class="movie-inscroll" wx:for="{{movieList}}" bindtap="onNavigate" data-mid="{{item.id}}">
     <view class="movie-inscroll-poster">
-      <image mode="aspectFill" src="{{item.poster}}"></image>
+      <image class="poster-image" mode="aspectFill" src="{{item.poster}}"></image>
     </view>
-    <view class="movie-inscroll-desc">
-      <text class="desc-text desc-title">{{item.title}}</text>
-      <text class="desc-text">类型：{{item.cate}}</text>
-      <text class="desc-text">导演：{{item.director}}</text>
-      <text class="desc-text">演员：{{item.performer}}</text>
+    <view class="movie-inscroll-title">{{item.title}}</view>
+    <view class="movie-inscroll-bottom">
+      <view class="movie-inscroll-rating" hidden="{{!item.released}}">
+        <rating-stars max="10" rating="{{item.rating_score}}"></rating-stars>
+      </view>
+      <view class="movie-inscroll-release_date" hidden="{{item.released}}">{{item.release_date}}</view>
     </view>
-    <view class="movie-inscroll-rating" hidden="{{!item.released}}">{{item.rating_score}}</view>
-    <view class="movie-inscroll-release_date" hidden="{{item.released}}">{{item.release_date}}</view>
   </view>
 </scroll-view>
