--- a/components/movie-list-x/movie-list-x.wxss
+++ b/components/movie-list-x/movie-list-x.wxss
@@ -1,76 +1,65 @@
 .scroll-view {
   width: 100%;
-  /* 竖向滚动需要设置高度 */
-  height: 100%;
-  /* overflow-y: auto; */
-  /* height: 100vh; */
+  /* 不换行 */
+  display: inline-flex;
+  white-space: nowrap;
 }
 
 .scroll-view .movie-inscroll {
   display: inline-flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  width: 100%;
-  height: 200rpx;
-  border-bottom: 1px solid rgb(248, 244, 244);
+  justify-content: center;
+  width: 150rpx;
+  height: 320rpx;
   /* border: 1px solid red; */
+}
+
+.scroll-view .movie-inscroll:not(:last-child) {
+  margin-right: 30rpx;
 }
 
 .movie-inscroll .movie-inscroll-poster {
-  width: 100rpx;
-  height: 150rpx;
+  width: 150rpx;
+  height: 225rpx;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin-left: 20rpx;
   /* border: 1px solid blue; */
 }
 
-.movie-inscroll-poster image {
+.movie-inscroll-poster .poster-image {
   position: relative;
-  width: 100rpx;
-  height: 150rpx;
-  border-radius: 10rpx;
+  width: 150rpx;
+  height: 225rpx;
+  border-radius: 20rpx;
   overflow: hidden;
 }
 
-.movie-inscroll .movie-inscroll-desc {
-  position: relative;
-  height: 100%;
-  width: 400rpx;
-  padding-bottom: 8rpx;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  /* border: 1px solid green; */
-}
-
-.movie-inscroll-desc .desc-text {
-  margin-left: 30rpx;
-  text-align: left;
-  font-size: 23rpx;
-  font-weight: 200;
+.movie-inscroll .movie-inscroll-title {
+  margin-top: 10rpx;
+  width: 100%;
+  height: 40rpx;
+  font-size: 24rpx;
+  font-weight: bold;
+  text-align: center;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
-
-.movie-inscroll-desc .desc-title {
-  position: relative;
-  margin-bottom: 15rpx;
-  font-size: 30rpx;
-  font-weight: bold;
-  /* border: 1px solid red; */
-}
-
-.movie-inscroll .movie-inscroll-rating {
-  width: 120rpx;
-  text-align: center;
   /* border: 1px solid blue; */
 }
 
+.movie-inscroll .movie-inscroll-bottom {
+  /* position: relative; */
+  height: 40rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid red; */
+}
+
 .movie-inscroll .movie-inscroll-release_date {
-  width: 120rpx;
   font-size: 20rpx;
   text-align: center;
   overflow: hidden;
