--- a/pages/demo/demo.wxml
+++ b/pages/demo/demo.wxml
@@ -1,3 +1,4 @@
 <view>
-  <rating-stars max="10" rating="6.5"></rating-stars>
+  <!-- <rating-stars max="10" rating="6.5"></rating-stars> -->
+  <movie-list-x></movie-list-x>
 </view>
