--- a/components/movie-list-y/movie-list-y.wxml
+++ b/components/movie-list-y/movie-list-y.wxml
@@ -1,7 +1,7 @@
 <scroll-view class="scroll-view" scroll-y="true" enhanced="true" show-scrollbar="false"
   bindscrolltolower="OnScrollToBottom" lower-threshold="50" bindscroll="onScroll">
   <view>
-    <view class="movie-inscroll" wx:for="{{movie_list}}" bindtap="navigate_to_movie" data-mid="{{item.id}}">
+    <view class="movie-inscroll" wx:for="{{movie_list}}" bindtap="onNavigate" data-mid="{{item.id}}">
       <view class="movie-inscroll-poster">
         <image mode="aspectFill" src="{{item.poster}}"></image>
       </view>
