--- a/pages/movie/movie.wxss
+++ b/pages/movie/movie.wxss
@@ -163,3 +163,10 @@
   position: relative;
   border-radius: 5%;
 }
+
+.recommend-movies .recommend-text {
+  margin-top: 40rpx;
+  margin-bottom: 10rpx;
+  font-size: 30rpx;
+  font-weight: 550;
+}
