--- a/components/movie-list-x/movie-list-x.wxml
+++ b/components/movie-list-x/movie-list-x.wxml
@@ -1,7 +1,7 @@
 <scroll-view class="scroll-view" scroll-x="true">
   <view class="movie-inscroll" wx:for="{{movieList}}" bindtap="onNavigate" data-mid="{{item.id}}">
     <view class="movie-inscroll-poster">
-      <image class="poster-image" mode="aspectFill" src="{{item.poster}}"></image>
+      <image class="poster-image" mode="aspectFill" src="{{item.poster}}" lazy-load="true"></image>
     </view>
     <view class="movie-inscroll-title">{{item.title}}</view>
     <!-- <view class="movie-inscroll-bottom">
