--- a/pages/movie/movie.wxml
+++ b/pages/movie/movie.wxml
@@ -1,4 +1,9 @@
 <!--pages/movie/movie.wxml-->
+<view class="like-bar">
+  <image src="../../assets/img/like.png" hidden="{{user_like}}" class="like-icon" bindtap="onLike"></image>
+  <image src="../../assets/img/like_fill.png" hidden="{{!user_like}}" class="like-icon" bindtap="onLike"></image>
+</view>
+
 <view class="main-content">
   <view class="header-content">
     <view class="movie-poster">
@@ -38,7 +43,7 @@
     <view class="main_cast-text">演职人员</view>
     <scroll-view class="main_cast-view" scroll-x>
       <view class="cast-item" wx:for="{{movie.main_cast}}">
-        <image src="{{item.avatar}}" class="cast-poster" mode="aspectFill"></image>
+        <image src="{{item.avatar}}" class="cast-poster" mode="aspectFill" lazy-load="true"></image>
         <view class="cast-text">{{item.name}}</view>
         <view class="cast-text" id="cast-role">{{item.role}}</view>
       </view>
@@ -50,7 +55,7 @@
     <scroll-view class="photos-view" scroll-x>
       <view class="photos-item" wx:for="{{movie.photos}}">
         <image src="{{item.url}}" class="photos-poster" bindload="set_photos_size" data-index="{{index}}"
-          mode="aspectFit" style="width:{{item.width}}rpx">
+          mode="aspectFit" style="width:{{item.width}}rpx" lazy-load="true">
         </image>
       </view>
     </scroll-view>
